# mca

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  extract_localizations.py  mca-linux.spec  mca-macos.spec  mca-windows.spec  mca.icns  mca.iss  pyproject.toml  setup.py
.github/workflows/: build-release-linux.yml  build-release-macos.yml  build-release-windows.yml  build-release.yml
docs/: api.rst  block_guide.rst  conf.py  config.rst  exceptions.rst  index.rst  installation.rst  language.rst  main.rst  readme.rst  usage.rst
docs/api1/: IObase.rst  blockbase.rst  blockregistry.rst  dynamicblock.rst  parameters.rst  signal.rst  signal_2d.rst  validator.rst
docs/blocks/: blocks.rst  index.rst
docs/framework/: block_base.rst  block_registry.rst  data_types.rst  helpers.rst  index.rst  io_base.rst  io_registry.rst  load.rst  parameters.rst  save.rst  util.rst  validator.rst
docs/gui/: index.rst
mca/: block_registry.py  config.py  data_types.py  exceptions.py  input_base.py  language.py  main.py  output_base.py  validator.py
mca/Base/: __init__.py  block_base.py  block_registry.py  dynamic_block_base.py  input_base.py  parameters.py
mca/DataTypes/: signal.py
mca/base/: block_base.py  block_registry.py  dynamic_block_base.py  output_base.py  parameters.py
mca/block/: __init__.py  absolute.py  adder.py
tests/: conftest.py  test_absolute.py  test_adder.py  test_block_base.py  test_block_registry.py  test_config.py  test_data.py  test_load.py  test_meta_data.py  test_parameters.py  test_save.py  test_validator.py
(+161 files in other folders)
