[project]
name = "mca"
description = """Graph based signal processing tool. \
              Data is being passed between blocks via inputs and outputs \
              in a block diagram. Allows sequential and parallel execution \
              of various processing steps in a easy and trivial manner."""
dynamic = ["version"]
readme = "README.rst"
authors = [
    {name = "Kevin Koch", email = "kevink2@mail.uni-paderborn.de"},
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
# Runtime dependencies
dependencies = ['numpy', 'scipy', 'networkx', 'matplotlib', 'appdirs', 'PySide6',
                'united', 'sounddevice', 'handyscope', 'dsch']

[project.optional-dependencies]
doc = [
    "setuptools_scm",
    "sphinx",
    "sphinx-rtd-theme",
]
test = [
    "pytest",
]

[project.scripts]
mca = "mca.main:main"

[project.urls]
homepage = "https://emt.uni-paderborn.de"
repository = "https://github.com/emtpb/mca/"

[build-system]
requires = ["setuptools>=41", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

# Automatically generate version number from git tags
[tool.setuptools_scm]
